--- a/public/apropos.html
+++ b/public/apropos.html
@@ -55,8 +55,8 @@
 			<ul class="">
 				<li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Home</a></li>
 				<li><a href="services.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Services</a></li>
-				<li><a href="apropos.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">A Propos</a></li>
-				<li><a href="contact.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contact Us</a></li>
+				<li><a href="apropos.hmtl" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">A Propos</a></li>
+				<li><a href="contact.hmtl" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contact Us</a></li>
 			</ul>
 		</div>
 		<script>
@@ -91,16 +91,13 @@
 	            </a>
 	            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
 	                <li>
-	                    <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+	                    <a href="apropos.html" class="mr-4 hover:underline md:mr-6 ">About</a>
 	                </li>
 	                <li>
-	                    <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+	                    <a href="services.html" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
 	                </li>
 	                <li>
-	                    <a href="#" class="mr-4 hover:underline md:mr-6 ">Licensing</a>
-	                </li>
-	                <li>
-	                    <a href="#" class="hover:underline">Contact</a>
+	                    <a href="contact.html" class="hover:underline">Contact</a>
 	                </li>
 	            </ul>
 	        </div>
