--- a/public/services.html
+++ b/public/services.html
@@ -56,7 +56,7 @@
 				<li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Home</a></li>
 				<li><a href="services.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Services</a></li>
 				<li><a href="apropos.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">A Propos</a></li>
-				<li><a href="contact.html" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contact Us</a></li>
+				<li><a href="contact.hmtl" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contact Us</a></li>
 			</ul>
 		</div>
 		<script>
