adding few texts

--- a/public/index.html
+++ b/public/index.html
@@ -72,11 +72,63 @@
 
 	<main>
 		<h1>
-			Hello world
+			De Kinésithérapeute à Magnétiseur
 		</h1>
 
+		<h3>Aider-soulager-servir</h3>
+		
 		<p>
+		C'est après avoir passer 4500 heures de formations en kinésithérapie, étudiant des domaines tels que l'appareil locomoteur,
+		la physiologie de l'ensemble des organes internes du corps humain, la gynécologie, la pédiatrie, l'orthopédie, la chirurgie, le système lymphatique,
+		le système respiratoire, la bio-mécanique, la neurologie dans son ensemble dont les systèmes nerveux, central et périphérique,
+		la psychologie ou encore la sociologie...	
+		</p>
 
+		<p>... que j'ai voulu aller plus loin en m'orientant vers le magnétisme et bientôt la kinésiologie!</p>
+
+		<p>
+		Tout être humain ainsi que toute matière que nous entoure est constitué d'énergie, de champs vibratoires. Pour être en bonne santé,
+		cette énergie doit circuler correctement.
+		</p>
+
+		<h3>Un Magnétiseur c'est quoi ?</h3>
+
+		<p>
+		Le magnétiseur est en mesure d'utiliser cette énergie pour soulager aussi bien le corps que l'esprit et dynamisant, filtrant et oriantant
+		l'énergie naturellement présente, il sature en énergie nouvelle le patient afin qu'il puisse utiliser cette énergie et aider son organisme à se guérir lui-même.
+		C'est un travail sur le corps énergétiques.
+		</p>
+
+		<p>
+		Les domaines dans lesquels j'interviens sont, tous les êtres vivants, les humains, les animaux, les végétaux...
+		</p>
+
+		<ul>
+			<li>Poumons et bronches</li>
+			<li>Calculs rénaux</li>
+			<li>Eczémas, psoriasis</li>
+			<li>Estomac</li>
+			<li>Cancer</li>
+			<li>Fibromes</li>
+			<li>Fractures, blessures</li>
+			<li>Problèmes psychologique</li>
+			<li>Verrues</li>
+			<li>Zonas</li>
+			<li>Sciatique</li>
+			<li>Système nerveux</li>
+			<li>Système lymphatique</li>
+			<li>Glandes encrines</li>
+			<li>chirurgie et ostéopathie énergétique</li>
+			<li>Les Chakras</li>
+			<li>Les points de Knap ou point gâchettes</li>
+			<li>Travail à distance</li>
+		</ul>
+
+		<h3>Important: Le magnétisme ou le magnétiseur ne peuvent remplacer la médecine allopathique!</h3>
+
+		<p>
+		Amoureux de la vie, les animaux sont pour moi des êtes égaux à nous-même, ils ont toujours fait partie de mon entourage, aujourd'hui encore les chiens,
+		les chats et les chavaux m'accompagnent.
 		</p>
 	</main>
     
@@ -91,16 +143,13 @@
 	            </a>
 	            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
 	                <li>
-	                    <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+	                    <a href="apropos.html" class="mr-4 hover:underline md:mr-6 ">About</a>
 	                </li>
 	                <li>
-	                    <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+	                    <a href="services.html" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
 	                </li>
 	                <li>
-	                    <a href="#" class="mr-4 hover:underline md:mr-6 ">Licensing</a>
-	                </li>
-	                <li>
-	                    <a href="#" class="hover:underline">Contact</a>
+	                    <a href="contact.html" class="hover:underline">Contact</a>
 	                </li>
 	            </ul>
 	        </div>
